--- a/03webpack/src/index.html
+++ b/03webpack/src/index.html
@@ -13,7 +13,7 @@
 
     <div class="box1">11</div>
     <div class="box2">22</div>
-    <div class="box3">kkks思考思考斯卡萨模块 卡萨拉昆达</div>
+    <div class="box3"> 卡萨拉昆达</div>
     <div id="header">
         222
     </div>
